# semesterproject

new/: partitions.csv  platformio.ini
new/data/: words.json
new/include/: header.h
new/include/Application/: Weather.h  WordBook.h
new/include/System/: Bluetooth.h  Conf.h  FileHandler.h  PageManager.h  display.h  network.h  touch.h
new/lib/epd2in7/: DEV_Config.h
new/lib/epd2in7/utility/: EPD_2in7.cpp
new/lib/epd_driver/: Display_EPD_W21.cpp  Display_EPD_W21.h  Display_EPD_W21_spi.cpp  Display_EPD_W21_spi.h  FT6336.cpp  FT6336.h  GUI_Paint.cpp  GUI_Paint.h  i2c.cpp  i2c.h
new/src/: main.cpp
new/src/Application/: Weather.cpp  WordBook.cpp
new/src/System/: Bluetooth.cpp  Conf.cpp  FileHandler.cpp  PageManager.cpp  display.cpp  network.cpp  touch.cpp
new/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AppPage.c  ui_CalendarPage.c  ui_HomePage.c  ui_SettingPage.c  ui_WeatherPage.c  ui_comp_hook.c  ui_comp_hook.h  ui_comp_textarea1.c  ui_font_ChineseSong16.c  ui_img_back_png.c  ui_img_qr_png.c  ui_img_setting_png.c  ui_img_time_png.c  ui_img_weather_png.c
test/: platformio.ini
test/include/: DEV_Config.h  EPD.h  display.h  head.h
test/include/System/: Conf.h  network.h
test/lib/epd2in7/: DEV_Config.h  EPD.h  ImageData.c  ImageData.h
test/src/: display.cpp  epd2in7-demo.cpp  main.cpp
test/src/System/: Conf.cpp  network.cpp
test/src/fiction/: wifiuser.h
test/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp.h  ui_comp_arc1.c  ui_comp_arc1.h  ui_comp_textarea1.h
test/test/: t.cpp
